--- a/src/content/docs/th/index.mdx
+++ b/src/content/docs/th/index.mdx
@@ -1,12 +1,12 @@
 ---
 title: มะนาวบอต เพื่อสตรีมที่ดีกว่า
-description: แชทบอตเอนกประสงค์สำหรับสตรีมเมอร์ทวิชมีทั้งการจัดการคิวเพลง โอเวอร์เลย์ ซานด์บอร์ด และอื่น ๆ
+description: แชทบอตอเนกประสงค์สำหรับสตรีมเมอร์ทวิชมีทั้งการจัดการคิวเพลง โอเวอร์เลย์ ซานด์บอร์ด และอื่น ๆ
 template: splash
 head:
   - tag: title
     content: หน้าหลัก | ManaoBot
 hero:
-  tagline: แชทบอตเอนกประสงค์สำหรับสตรีมเมอร์ทวิชมีทั้งการจัดการคิวเพลง โอเวอร์เลย์ ซานด์บอร์ด และอื่น ๆ
+  tagline: แชทบอตอเนกประสงค์สำหรับสตรีมเมอร์ทวิชมีทั้งการจัดการคิวเพลง โอเวอร์เลย์ ซานด์บอร์ด และอื่น ๆ
   image:
     file: https://raw.githubusercontent.com/tinarskii/manao/main/docs/manao.svg
     alt: Manao Logo
