Add discord tutorial

--- a/src/content/docs/index.mdx
+++ b/src/content/docs/index.mdx
@@ -21,6 +21,7 @@ hero:
 ---
 
 import { Card, CardGrid } from '@astrojs/starlight/components';
+import "../../styles/home.css"
 
 ## ทำไมต้องมะนาว?
 
@@ -30,20 +31,23 @@ import { Card, CardGrid } from '@astrojs/starlight/components';
   </Card>
 
   <Card title="โอเวอร์เลย์" icon="comment">
-    มีโอเวอร์เลย์แชทที่พร้อมใช้งานได้เลย คนดูสามารถตั้งชื่อเล่นที่กำหนดเองได้ด้วย
+    มีโอเวอร์เลย์แชทและโอเวอร์เลย์ต่าง ๆ เช่น เพลงที่กำลังเล่นผ่านบอต และอีเวนต์ฟีตที่พร้อมใช้งานได้เลย นอกจากนั้นแล้วคนดูสามารถตั้งชื่อเล่นที่กำหนดเองในโอเวอร์เลย์แชทได้ด้วย
   </Card>
 
   <Card title="ซาวด์บอร์ด" icon="rss">
-    เรียกใช้เสียงเอฟเฟกต์ได้ทันทีผ่านตัวควบคุมซาวด์บอร์ดหรือให้คนดูแลกผ่านแต้มช่อง (ตั้งค่าได้)
+    เรียกใช้เสียงเอฟเฟกต์ได้ทันทีผ่านตัวควบคุมซาวด์บอร์ดหรือให้คนดูแลกผ่านแต้มช่องที่สามารถตั้งค่าได้เองผ่านหน้าจัดการแต้มช่อง
   </Card>
 
   <Card title="เพิ่มคำสั่งใหม่" icon="setting">
-    ถ้าคำสั่งที่มีอยู่ยังไม่ถูกใจ ก็สร้างคำสั่งใหม่เองได้ด้วย!
+    บอตมะนาวสามารถเพิ่มคำสั่งที่สร้างขึ้นเองได้ด้วยผ่านระบบจัดการคำสั่งในมะนาวเว็บ เขียนอะไรก็ได้เลยตามต้องการ!
   </Card>
 
   <Card title="โอเพ่นซอร์ส" icon="open-book">
-    มะนาวบอต เป็นโปรแกรมโอเพ่นซอร์สและฟรีเขียนโดย @ทินนาร์สกี้ เอาไว้ให้สตรีมเมอร์รวม tools ไว้ที่เดียวง่าย ๆ ไม่ต้องไปล็อกอินมั่วซั่ว ถ้าชอบก็กดไลก์ ใช่กดแชร์ ดีกว่าก็คือกดโอน
+    มะนาวบอต เป็นโปรแกรมโอเพ่นซอร์สและฟรี ปลอดภัยแน่นอน ไม่มีล่มด้วย และมีความยืดหยุ่นสูง ปรับแต่งเองได้เยอะมาก ๆ
+  </Card>
 
+  <Card title="พร้อมบอตดิสคอร์ด" icon="discord">
+    นอกจากมะนาวจะมีบอตทวิชแล้ว ยังมีบอตดิสคอร์ดให้ใช้ควบคู่กันได้อีกด้วย และสามารถเชื่อมต่อบัญชีทวิชกับดิสคอร์ดได้ง่าย ๆ ไม่ยุ่งยาก
   </Card>
 </CardGrid>
 
