--- a/src/content/docs/en/index.mdx
+++ b/src/content/docs/en/index.mdx
@@ -21,6 +21,7 @@ hero:
 ---
 
 import { Card, CardGrid } from '@astrojs/starlight/components';
+import "../../../styles/home.css"
 
 ## Why Manao?
 
