--- a/src/content/docs/index.mdx
+++ b/src/content/docs/index.mdx
@@ -1,12 +1,12 @@
 ---
-title: มะนาวบอต เพื่อสตรีมที่ดีกว่า
-description: แชทบอตอเนกประสงค์สำหรับสตรีมเมอร์ทวิชมีทั้งการจัดการคิวเพลง โอเวอร์เลย์ ซานด์บอร์ด และอื่น ๆ
+title: มะนาวบอต <br> เพื่อสตรีมที่ดีกว่า
+description: แชทบอตอเนกประสงค์สำหรับสตรีมเมอร์ Twitch และ Kick ที่มีทั้งการจัดการคิวเพลง โอเวอร์เลย์ ซาวด์บอร์ด และอื่น ๆ
 template: splash
 head:
   - tag: title
     content: หน้าหลัก | ManaoBot
 hero:
-  tagline: แชทบอตอเนกประสงค์สำหรับสตรีมเมอร์ทวิชมีทั้งการจัดการคิวเพลง โอเวอร์เลย์ ซานด์บอร์ด และอื่น ๆ
+  tagline: แชทบอตอเนกประสงค์สำหรับสตรีมเมอร์ Twitch และ Kick ที่มีทั้งการจัดการคิวเพลง โอเวอร์เลย์ ซาวด์บอร์ด และอื่น ๆ
   image:
     file: https://raw.githubusercontent.com/tinarskii/manao/main/docs/manao.svg
     alt: Manao Logo
@@ -21,7 +21,19 @@ hero:
 ---
 
 import { Card, CardGrid } from '@astrojs/starlight/components';
-import "../../styles/home.css"
+import "../../../styles/home.css"
+
+<center><h1>🧡 โดยสตรีมเมอร์ เพื่อสตรีมเมอร์ 🍋</h1></center>
+
+<div class="sponsor-avatars">
+  <a href="https://twitch.tv/skypowerful" target="_blank">
+    <img src="https://static-cdn.jtvnw.net/jtv_user_pictures/843bc42c-9ddc-466d-bcd2-4d06a67f0610-profile_image-70x70.png" alt="skypowerful" />
+  </a>
+  <a href="https://twitch.tv/tinarskii" target="_blank">
+    <img src="https://static-cdn.jtvnw.net/jtv_user_pictures/e49d1ee1-a99f-41c8-b521-ce90b2651441-profile_image-70x70.jpeg" alt="tinarskii" />
+  </a>
+</div>
+
 
 ## ทำไมต้องมะนาว?
 
@@ -55,7 +67,7 @@ import "../../styles/home.css"
 
 <CardGrid stagger>
   <Card title="คู่มือการใช้งาน" icon="document">
-    อ่านคู่มือการตั้งค่าและการใช้งานได้ใน <a href="/th/00-getting-started">หน้าคู่มือ</a>
+    อ่านคู่มือการตั้งค่าและการใช้งานได้ใน <a href="/th/guides/00-getting-started">หน้าคู่มือ</a>
   </Card>
 
   <Card title="เข้าดิสคอร์ด" icon="discord">
