fix: build error

--- a/src/content/docs/index.mdx
+++ b/src/content/docs/index.mdx
@@ -21,7 +21,7 @@ hero:
 ---
 
 import { Card, CardGrid } from '@astrojs/starlight/components';
-import "../../../styles/home.css"
+import "../../styles/home.css"
 
 <center><h1>🧡 โดยสตรีมเมอร์ เพื่อสตรีมเมอร์ 🍋</h1></center>
 
