refactor: change root language

--- a/src/content/docs/index.mdx
+++ b/src/content/docs/index.mdx
@@ -1,5 +1,5 @@
 ---
-title: มะนาวบอต <br> เพื่อสตรีมที่ดีกว่า
+title: มะนาวบอต แชทบอตเพื่อสตรีมที่ดีกว่า
 description: แชทบอตอเนกประสงค์สำหรับสตรีมเมอร์ Twitch และ Kick ที่มีทั้งการจัดการคิวเพลง โอเวอร์เลย์ ซาวด์บอร์ด และอื่น ๆ
 template: splash
 head:
@@ -12,7 +12,7 @@ hero:
     alt: Manao Logo
   actions:
     - text: เริ่มใช้งาน
-      link: /th/guides/00-getting-started/
+      link: /guides/00-getting-started/
       icon: rocket
     - text: ดูบน GitHub
       link: https://github.com/tinarskii/manao
@@ -67,7 +67,7 @@ import "../../styles/home.css"
 
 <CardGrid stagger>
   <Card title="คู่มือการใช้งาน" icon="document">
-    อ่านคู่มือการตั้งค่าและการใช้งานได้ใน <a href="/th/guides/00-getting-started">หน้าคู่มือ</a>
+    อ่านคู่มือการตั้งค่าและการใช้งานได้ใน <a href="/guides/00-getting-started">หน้าคู่มือ</a>
   </Card>
 
   <Card title="เข้าดิสคอร์ด" icon="discord">
