--- a/src/content/docs/index.mdx
+++ b/src/content/docs/index.mdx
@@ -11,11 +11,15 @@ hero:
     file: https://raw.githubusercontent.com/tinarskii/manao/main/docs/manao.svg
     alt: Manao Logo
   actions:
-    - text: เริ่มใช้งาน
+    - text: ดาวน์โหลดเลย!
+      link: https://github.com/tinarskii/Manao/releases/download/4.0.0/ManaoBotSetup.exe
+      icon: download
+    - text: คู่มือการใช้งาน
       link: /guides/00-getting-started/
-      icon: rocket
+      icon: open-book
+      variant: secondary
     - text: ดูบน GitHub
-      link: https://github.com/tinarskii/manao
+      link: https://github.com/mymanao/manao
       icon: external
       variant: minimal
 ---
